[auth] 完成客戶端 token 驗證
test

先改回去

[token] 完成 managerToken (rest api)

[github action] 補上 8.1

[房間] 建立房間

test

[composer] 版本修正

支援 php 7.2 以下版本

codecov 測試

codecov 測試

save

codecov 測試

codecov 測試

codecov 測試

codecov 測試

codecov 測試

改寫法

安裝 php cs

安裝 php cs

安裝 php cs

補權限

Fix styling

補上測試覆蓋+style fix

補上測試覆蓋+style fix

補上測試覆蓋+style fix

fix

刪除一些步驟

fix

[room-api] 建立房間 API 完成

Fix styling

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,11 @@
 name: run-tests
 
+permissions:
+  contents: write
+  
 on:
     push:
-        branches: [master]
+        branches: [master,slps970093/develop/auth]
     pull_request:
         branches: [master]
 
@@ -41,5 +44,6 @@ jobs:
               run: |
                   composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
                   composer update --${{ matrix.stability }} --prefer-dist --no-interaction
+
             - name: Execute tests
-              run: vendor/bin/phpunit
+              run: vendor/bin/phpunit --verbose
