--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ ehthumbs_vista.db
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
 
+build
+
 # Windows Installer files
 *.cab
 *.msi
@@ -288,28 +290,9 @@ nbdist/
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
-# User-specific stuff
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
 
-# Generated files
-.idea/**/contentModel.xml
 
-# Sensitive or high-churn files
-.idea/**/dataSources/
-.idea/**/dataSources.ids
-.idea/**/dataSources.local.xml
-.idea/**/sqlDataSources.xml
-.idea/**/dynamic.xml
-.idea/**/uiDesigner.xml
-.idea/**/dbnavigator.xml
 
-# Gradle
-.idea/**/gradle.xml
-.idea/**/libraries
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
@@ -469,6 +452,14 @@ composer.lock
 
 ##### SASS
 .sass-cache/
+*.result.cache
 *.css.map
 *.sass.map
 *.scss.map
+*.cache
+
+.idea
+coverage.xml
+.phpunit.result.cache
+.php-cs-fixer.cache
+
