--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,18 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "illuminate/support": "^8.0"
+        "firebase/php-jwt": "^6.3",
+        "guzzlehttp/guzzle": "^7.5",
+        "illuminate/support": "^8.0|^9.0",
+        "laravel/framework": "8.*",
+        "nesbot/carbon": "^2.65",
+        "orchestra/testbench": "^6.6",
+        "symfony/property-access": "^5.4|^6.2",
+        "symfony/serializer": "^5.4|^6.2",
+        "ext-json": "*"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.0",
+        "friendsofphp/php-cs-fixer": "^3.13",
         "phpunit/phpunit": "^9.0"
     },
     "autoload": {
