[CI] 調整作業流程
1. style 修正改成特定分支執行
2. CI 修改為特定分支跑就好

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ permissions:
   
 on:
     push:
-        branches: [master,slps970093/develop/auth]
+        branches: [master,dev-baseapi]
     pull_request:
         branches: [master]
 
