--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "illuminate/support": "^8.0|^9.0",
         "laravel/framework": "^8.0|^9.0",
         "nesbot/carbon": "^2.0.0",
-        "orchestra/testbench": "^6.6",
+        "orchestra/testbench": "^6.6|^v7.6",
         "symfony/property-access": "^5.4|^6.2",
         "symfony/serializer": "^5.4|^6.2",
         "ext-json": "*"
