--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,13 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^7.4|^8.0|^8.1|^8.2",
         "firebase/php-jwt": "^6.3",
         "guzzlehttp/guzzle": "^7.5",
-        "illuminate/support": "^8.0|^9.0",
-        "laravel/framework": "^8.0|^9.0",
+        "illuminate/support": "^7.0|^8.0|^9.0",
+        "laravel/framework": "^7.0|^8.0|^9.0",
         "nesbot/carbon": "^2.0.0",
-        "orchestra/testbench": "^6.6|^v7.6",
+        "orchestra/testbench": "^5.6|^6.6|^v7.6",
         "symfony/property-access": "^5.4|^6.2",
         "symfony/serializer": "^5.4|^6.2",
         "ext-json": "*"
