--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
         "php": "^7.4|^8.0|^8.1|^8.2",
         "firebase/php-jwt": "^6.3",
         "guzzlehttp/guzzle": "^7.5",
-        "illuminate/support": "^7.0|^8.0|^9.0",
-        "laravel/framework": "^7.0|^8.0|^9.0",
+        "illuminate/support": "^7.0|^8.0|^9.0|^10.0",
+        "laravel/framework": "^7.0|^8.0|^9.0|^10.0",
         "nesbot/carbon": "^2.0.0",
         "orchestra/testbench": "^5.6|^6.6|^v7.6",
         "symfony/property-access": "^5.4|^6.2",
